# mail-notifier

./: .dir-locals.el  .envrc  CHANGELOG.md  flake.nix  mail-notifier.cabal
app/: Main.hs  MainDBusBroker.hs  MainDBusService.hs
src/: MailNotifier.hs
src/MailNotifier/: App.hs  DBus.hs  DBusBroker.hs  Exception.hs  Mail.hs  Types.hs  Utils.hs  Watchdog.hs
src/MailNotifier/Types/: Main.hs  Timeout.hs
src/MailNotifier/Types/Timeout/: TH.hs
src/Network/: MailNotifier.hs
src/Network/MailNotifier/: DBusBroker.hs  DBusService.hs  Utils.hs
