cabal-version:   3.0
name:            mail-notifier
version:         0.1.0.0
synopsis:
  A tool to immediately run mbsync and notify your MUA for new mails

-- description:
homepage:        https://github.com/jian-lin/mail-notifier
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Lin Jian
maintainer:      me@linj.tech

-- copyright:
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common thread
  ghc-options: -threaded

library
  import:
    warnings
    , thread

  exposed-modules:
    Network.MailNotifier
    Network.MailNotifier.DBusBroker
    Network.MailNotifier.Utils

  other-modules:    PackageInfo_mail_notifier
  autogen-modules:  PackageInfo_mail_notifier

  -- other-extensions:
  build-depends:
    , async
    , base
    , chronos
    , co-log
    , dbus
    , HaskellNet
    , HaskellNet-SSL
    , mtl
    , optparse-applicative
    , process
    , stm
    , systemd
    , text
    , unordered-containers

  hs-source-dirs:   src
  default-language: Haskell2010

executable mail-notifier
  import:
    warnings
    , thread

  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , mail-notifier

  hs-source-dirs:   app
  default-language: Haskell2010

executable mail-notifier-dbus-broker
  import:
    warnings
    , thread

  main-is:          MainDBusBroker.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , mail-notifier

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite mail-notifier-test
  import:
    warnings
    , thread

  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , mail-notifier
