cabal-version:   3.0
name:            mail-notifier
version:         0.1.0.0
synopsis:
  A tool to immediately run mbsync and notify your MUA for new mails

-- description:
homepage:        https://github.com/jian-lin/mail-notifier
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Lin Jian
maintainer:      me@linj.tech

-- copyright:
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common thread
  ghc-options: -threaded

common deps
  build-depends:
    , base                  ^>=4.18.2.1
    , co-log                ^>=0.6.1.0
    , optparse-applicative  ^>=0.18.1.0
    , relude                ^>=1.2.1.0
    , unliftio              ^>=0.2.25.0

  default-extensions:
    DerivingStrategies
    NoImplicitPrelude
    OverloadedStrings

  default-language:   GHC2021

library
  import:
    warnings
    , thread
    , deps

  exposed-modules:
    MailNotifier
    MailNotifier.App
    MailNotifier.DBus
    MailNotifier.Exception
    MailNotifier.Mail
    MailNotifier.Types
    MailNotifier.Utils
    MailNotifier.Watchdog

  -- other-modules:    PackageInfo_mail_notifier
  -- autogen-modules:  PackageInfo_mail_notifier

  -- other-extensions:
  build-depends:
    , dbus            ^>=1.3.3
    , HaskellNet      ^>=0.6.1.2
    , HaskellNet-SSL  ^>=0.4.0.0
    , systemd         ^>=2.3.0

  hs-source-dirs:  src

executable mail-notifier
  import:
    warnings
    , thread
    , deps

  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  mail-notifier
  hs-source-dirs: app

executable mail-notifier-dbus-broker
  import:
    warnings
    , thread
    , deps

  main-is:        MainDBusBroker.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  mail-notifier
  hs-source-dirs: app

test-suite mail-notifier-test
  import:
    warnings
    , thread
    , deps

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  mail-notifier
